--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,319 @@
 .App {
-  text-align: center;
+    width: 100vw;
+    height: 100vh;
+    background-color: #faf9fb;
+    overflow-x: hidden;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App::-webkit-scrollbar {
+    display: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+/* Bottom-Menu-Zero */
+
+.bottomMenu {
+    position: fixed;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    height: 60px;
+    background-color: #b5b5b5;
+    border-radius: 25px 25px 0 0;
+    z-index: 101;
+    bottom: 0;
+    left: 0;
+
+}
+
+.bottomMenu ul {
+    display: flex;
+
+
+}
+
+.bottomMenu ul li.active .icon {
+    transform: translateY(-35px);
+    color: var(--back);
+
+
+}
+
+.bottomMenu ul li.active .icon .MuiSvgIcon-root {
+    transition: 0.5s;
+    color: #faf9fb;
+
+}
+
+.indicator {
+    position: absolute;
+    height: 60px;
+    width: 60px;
+    background-color: orange;
+    border-radius: 100vw;
+    border: 5px solid var(--back);
+    top: -30px;
+    transition: 0.5s;
+}
+
+.indicator::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: -20px;
+    width: 19px;
+    height: 20px;
+    box-shadow: 0px -5.5px 0 0 var(--back);
+    border-top-right-radius: 18px;
+
+}
+
+.indicator::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    right: -20px;
+    width: 18px;
+    height: 18px;
+    box-shadow: 0px -6px 0 0 var(--back);
+    border-top-left-radius: 18px;
+
+}
+
+.bottomMenu ul li:nth-child(1).active~.indicator {
+    transform: translateX(calc(60px*0));
+}
+
+.bottomMenu ul li:nth-child(2).active~.indicator {
+    transform: translateX(calc(60px*1));
+}
+
+.bottomMenu ul li:nth-child(3).active~.indicator {
+    transform: translateX(calc(60px*2));
+}
+
+.bottomMenu ul li:nth-child(4).active~.indicator {
+    transform: translateX(calc(60px*3));
+}
+
+.bottomMenu ul li:nth-child(5).active~.indicator {
+    transform: translateX(calc(60px*4));
+}
+
+.bottomMenu ul li:nth-child(6).active~.indicator {
+    transform: translateX(calc(60px*5));
+
+
+
+}
+
+
+
+/* main body......... */
+
+main {
+    width: 100%;
+    height: auto;
+    background-color: var(--back);
+    margin-top: 60px;
+
+
+}
+
+.main-container {
+    width: 100%;
+    height: auto;
+    background-color: var(--back);
+    padding: 10px;
+    padding-bottom: 100px;
+}
+
+.banner-image {
+    position: absolute;
+    right: -5px;
+    bottom: -8px;
+    width: 170px;
+    opacity: 0.9;
+}
+
+.banner {
+    display: flex;
+
+    flex-wrap: wrap;
+    position: relative;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    height: 180px;
+    border-radius: 10px;
+    background: url("./images/img/heroBg.png") no-repeat center;
+    background-size: cover;
+    padding: 0px 10px;
+    box-shadow: 0 3px 20px rgba(0, 0, 0, 0.1);
+
+}
+
+.dishContainer {
+    width: 100%;
+    padding: 10px 0;
+}
+
+.menuCard {
+    width: 100%;
+}
+
+.rowContainer {
+    display: flex;
+    align-items: center;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    margin: 10px 0;
+    padding: 10px 0;
+}
+
+.rowContainer::-webkit-scrollbar {
+    display: none;
+}
+
+.dishItemContainer {
+    display: flex;
+    justify-content: space-around;
+    align-content: center;
+    flex-wrap: wrap;
+
+}
+
+
+.right-container {
+    width: 350px;
+    height: 100%;
+    background-color: white;
+    position: fixed;
+    right: 0;
+    top: 60px;
+    z-index: 500;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px 10px;
+    transform: translateX(200%);
+    transition: transform 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.9);
+
+}
+
+.right-container.activeRightMenu{
+  transform: translateX(0%);
+}
+
+
+.debitCardContainer {
+    padding: 10px;
+    width: 100%;
+    height: auto;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  .debitCard {
+    position: relative;
+    width: 100%;
+    height: 170px;
+    min-width: 300px;
+    min-height: 170px;
+    border-radius: 15px;
   }
-  to {
-    transform: rotate(360deg);
+  
+  .debitCard::before {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #f8901c;
+    transform: rotate(5deg);
+    border-radius: 15px;
+    filter: blur(2px);
+    z-index: -2;
   }
-}
+  
+  .debitCard::after {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(
+      35deg,
+      rgba(255, 255, 255, 0.3),
+      rgba(255, 255, 255, 0.1)
+    );
+    border-radius: 15px;
+    backdrop-filter: blur(10px);
+    z-index: -1;
+    border: 1px solid rgba(255, 255, 255, 0.4);
+  }
+  
+
+  .cartContainer{
+    width: 100%;
+    min-height: 260px;
+    max-height: 400px;
+    margin-top: 10px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+  }
+
+  .cartContainer::-webkit-scrollbar{
+    display: none;
+  }
+  .cardCheckoutContainer{
+    width: 100%;
+    height: 500px;
+    min-height: 260px;
+    max-height: 280px;
+    margin-top: 10px;
+        
+  }
+  .totalSection{
+    width: 100%;
+    min-height: 50px;
+    /* background-color: red; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px 8px;
+    margin: 15px 0x;
+  }
+ .totalSection h3{
+    font-size: 25px;
+    font-weight: 600;
+    color: #282b3c;
+ }
+
+ .totalSection p{
+    font-size: 18px;
+    font-weight: 600;
+    color: #282b3c;
+ }
+
+ .totalSection p span{
+    font-size: 14px;
+    color: orange;
+ }
+
+ .checkOut{
+    outline: none;
+    border: none;
+   
+    width: 100%;
+    padding:  10px 20px;
+    background-color: orange;
+    border-radius: 100vw;
+    font-size: 18px;
+    color: white;
+    font-weight: 600;
+    letter-spacing: 2px;
+
+ }
