--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,7 +15,15 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html,body{
+  scroll-behavior: smooth;
 }
+:root{
+  --dark:#2a2b32;
+  --back:#faf9fb;
+}
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
